WSL USB Patch 2

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,7 +10,7 @@ set(F_CPU 16000000UL)
 ##########################################################################
 set(AVR_UPLOADTOOL avrdude)
 set(AVR_PROGRAMMER avr109)
-set(AVR_UPLOADTOOL_PORT /dev/ttyZumoCarAVR)
+set(AVR_UPLOADTOOL_PORT /dev/ttyACM0)
 
 ##########################################################################
 # AVR and fuses needs to be set
@@ -182,10 +182,10 @@ add_avr_library( MEGN540 ${MEG540_C_LIB_SRC_FILES} )
 avr_target_link_libraries(MEGN540 LUFA_USB)
 
 # Add Lab Subdirectories
-add_subdirectory(Lab0-Blink)
+#add_subdirectory(Lab0-Blink)
 add_subdirectory(Lab1-Serial)
-add_subdirectory(Lab2-Timing)
-add_subdirectory(Lab3-Encoder)
-add_subdirectory(Lab4-MotorPWM)
-add_subdirectory(Lab5-Control)
+#add_subdirectory(Lab2-Timing)
+#add_subdirectory(Lab3-Encoder)
+#add_subdirectory(Lab4-MotorPWM)
+#add_subdirectory(Lab5-Control)
 
